--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,18 @@ services:
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     restart: always
     ports:
-      -'8000:8000'
+      - '8000:8000'
     depends_on:
       - db
   db:
     image: postgres
     environment:
-      - POSTGRES_USER: admin
-      - POSTGRES_PASSWORD: admin
-      - POSTGRES_DB: carsher_db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: carsher_db
     restart: always
     ports:
-      -'5432:5432'
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   pgadmin:
