--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
       - '8000:8000'
     depends_on:
       - db
+    volumes:
+      - ./app:/app
+      - ./alembic.ini:/alembic.ini
+    env_file:
+      - .env
   db:
     image: postgres
     environment:
@@ -30,21 +35,25 @@ services:
       - "5050:80"
     depends_on:
       - db
-  worker:
-    build: .
-    command: celery -A celery_app worker --loglevel=info
-    depends_on:
-      - db
-      - redis
-  redis:
-    image: 'redis:apline'
-    ports:
-      - '6379:6379'
+  # worker:
+  #   build: .
+  #   command: celery -A celery_app worker --loglevel=info
+  #   depends_on:
+  #     - db
+  #     - redis
+  # redis:
+  #   image: 'redis:alpine'
+  #   ports:
+  #     - '6380:6379'
   alembic:
     build: .
     command: alembic upgrade head
     restart: no
     depends_on:
       - db
+    volumes:
+      - ./app:/app
+      - ./alembic.ini:/app/alembic.ini
+      - ./alembic:/app/alembic
 volumes:
   postgres_data:
