add tests structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,11 +35,11 @@ services:
       - "5050:80"
     depends_on:
       - db
-  # worker:
-  #   build: .
-  #   command: celery -A celery_app worker --loglevel=info
-  #   depends_on:
-  #     - db
+  worker:
+    build: .
+    command: celery -A celery_app worker --loglevel=info
+    depends_on:
+      - db
   #     - redis
   # redis:
   #   image: 'redis:alpine'
