--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,11 @@ services:
     command: celery -A celery_app worker --loglevel=info
     depends_on:
       - db
+  beat:
+    build: .
+    command: celery -A celery_app beat --loglevel=info
+    depends_on:
+      - db
   #     - redis
   # redis:
   #   image: 'redis:alpine'
