--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,5 +56,28 @@ services:
     restart: no
     depends_on:
       - db
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.3
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.15.3
+    environment:
+      - ELASTICSEARCH_HOSTS=http://es-container:9200
+    networks:
+      - es-net
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
 volumes:
   postgres_data:
+  esdata:
+networks:
+  es-net:
+    driver: bridge
