--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     restart: no
     depends_on:
       - db
-  elasticsearch:
+  elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.15.3
     environment:
       - xpack.security.enabled=false
